Commit pagination, mock, stub, tests unitaires 27-10

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.thymeleaf.mode=HTML
 logging.level.org.springframework=INFO
 spring.profiles.active=production
 spring.jpa.show-sql=true 
+server.mode=${MODES:PROD}
+
